@@ -1,14 +1,17 @@
 package com.baeldung.exceptions;
 
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
-import java.net.UnknownHostException;
+import java.net.*;
 
 public class UnknownHostExceptionHandling {
 
     public static int getResponseCode(String hostname) throws IOException {
-        URL url = new URL(hostname.trim());
+        URL url = null;
+        try {
+            url = new URI(hostname.trim()).toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         int resCode = -1;
         try {
@@ -20,7 +23,12 @@ public class UnknownHostExceptionHandling {
     }
     
     public static int getResponseCodeUnhandled(String hostname) throws IOException {
-        URL url = new URL(hostname.trim());
+        URL url = null;
+        try {
+            url = new URI(hostname.trim()).toURL();
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
+        }
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         int resCode = con.getResponseCode();
         return resCode;
